# mtgp

./: Cargo.toml  LICENSE  README.md  config.toml
src/: card.rs  cli.rs  main.rs
src/config_reader/: config_reader.rs  mod.rs
