[package]
name = "mtgp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
clap = "3.0.0-beta.4"
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3"
